--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "infraprint",
+  "name": "hypervibe",
   "version": "0.1.0",
   "description": "MCP server for chat-driven infrastructure management",
   "type": "module",
   "main": "dist/index.js",
   "bin": {
-    "infraprint": "dist/index.js"
+    "hypervibe": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
